fixed overlap

--- a/client/components/EditProfile/styles/editProfile.module.scss
+++ b/client/components/EditProfile/styles/editProfile.module.scss
@@ -139,6 +139,8 @@
       ul {
         padding: 0;
         list-style: none;
+        display: flex;
+        flex-wrap: wrap;
         li {
           margin: 2px 0;
           padding: 4px 0;
